# Stutter-enhancer

./: README.md  package-lock.json  package.json
backend/: .gitattributes  .gitignore  README.md  pyproject.toml
backend/app/: celery_config.py  main.py  utils.py
backend/app/aicore/stt/: whisperstt.py
backend/app/aicore/tts/: OuteTTS-0.1-350M-Q8_0.gguf  ttsclone.py
backend/app/api/: router.py
backend/app/db/: models.py  session.py
backend/app/schema/: audio.py  transcript.py
backend/app/service/: db_srv.py  minio_srv.py
backend/app/tasks/: aiworker.sh  celery_config.py  celery_tasks.py  localworker.sh  worker.sh
backend/deployment/: .env  ai.dockerfile  docker-compose.yml  dockercompose.yml  req.txt  setup_db.py  setup_minio.py  web.dockerfile
frontend/: Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  AudioControlBar.tsx  AudioPlayer.tsx  EnhancedView.tsx  EnhancedWindow.tsx  LoadingOverlay.tsx  MicrophoneButton.tsx  MicrophoneCircle.tsx  StutterEnhancerTitle.tsx  TextboxWithSubmit.tsx
frontend/src/components/: AudioControlBar.tsx  AudioPlayer.css  AudioPlayer.tsx  EnhancedView.tsx  EnhancedWindow.css  EnhancedWindow.tsx  ErrorMessage.tsx  LoadingOverlay.tsx  MicrophoneButton.tsx  MicrophoneCircle.tsx  RecordingView.tsx  (+4 more)
frontend/stutter-enhancer/: package-lock.json  package.json
k8s/backend/: app-secrets.yaml  secret.yaml
k8s/frontend/: deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  service.yaml
k8s/minio/: minio-deployment.yaml  minio-secret.yaml
(+14 files in other folders)
