[project]
name = "stut-enhancer"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "whispercpp @ git+https://github.com/stlukey/whispercpp.py",
    "librosa (>=0.11.0,<0.12.0)",
    "outetts @ git+https://github.com/kaoutaar/OuteTTS.git",
    "minio (>=7.2.15,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "uvicorn (>=0.34.1,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
